--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -196,9 +196,9 @@ For our front-end code, written in JavaScript, we will follow the JavaScript Sta
     project?\\\\
     Starting with a development plan was useful for our team for two reasons. First, it helped us develop a clearer picture of what our project will look
     like. In order to make development plan decisions, we had to discuss the actual project itself. This gave us a chance to clear up misconceptions
-    we were having, and dicuss what our overall mission is. Almost more importantly though, working on this document (and problem statement/goals)
-    was a sort of dry run for future deliverables. As we worked on this doc, we were able to put our plans of how we thought we would work together to the test. We found 
-    that our git workflow needed a couple refinements and clarifications. For example, we needed to create more descriptive pull request titles and descriptions
+    we were having, and discuss what our overall mission is. More importantly though, working on this document (and problem statement/goals)
+    was a dry run for future deliverables. As we worked on this doc, we were able to put our plans of how we thought we would work together to the test. We found 
+    that our git workflow needed a couple of refinements and clarifications. For example, we needed to create more descriptive pull request titles and descriptions
     so that reviewers know what they are looking to review before approving. Otherwise, it was very hard to get feedback on the \textit{Team Charter} section if the 
     pull review was called `8-expectations'.
   
