--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -147,7 +147,7 @@ type checker as part of our CI/CD workflow. This is possible with a package call
  a linting step before pull requests can be merged into the main branch.
 
 \subsubsection{Testing}
-We will use suite of tests to ensure our code base continues to satisfy our requirements before integrating changes into the code base. These tests
+We will use a suite of tests to ensure our code base continues to satisfy our requirements before integrating changes into the code base. These tests
 will be run when a new pull request is created, before a code review is conducted.
 
 \subsubsection{Deployment}
