--- a/docs/ProblemStatementAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatementAndGoals/ProblemStatement.tex
@@ -22,7 +22,7 @@
 \toprule
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
-09/19/2024 & Kyle McMaster & Added goals and stretch goals\\
+
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -62,16 +62,16 @@ within images, with minimal training. It should also be simple for users to uplo
 get started with, and continue using the system. This is necessary to build a large enough user base, which will make it more likely to get insights in an acceptable 
 amount of time.
 \subsection{Minimizing Cost to Analyze Images}
-\textbf{Description: }The system should minimize the cost for users who upload images. This could be implemented through intelligent algorithms for task delegation. \\\\
-\textbf{Rationale: }Users of the system are interested in getting an appropriate return for their investment. If the cost to analyze is too high, the platform will not
+\textbf{Description: }The system should minimize the cost for users request insights from images. This could be implemented through intelligent algorithms for task delegation. \\\\
+\textbf{Rationale: }Users of the system who upload images are interested in getting an appropriate return for their investment. If the cost to analyze is too high, the platform will not
 retain a sufficiently large user base of purchasers.
 \subsection{Results Returned Within Appropriate Timeframe}
-\textbf{Description: }The system should ensure the time it takes to obtain information from images is within a specified limit. \\\\
+\textbf{Description: }The system should ensure the time it takes to obtain information from images is within a specified limit, as determined by users who upload images. \\\\
 \textbf{Rationale: }Purchasers will have some time limit they require the system to process images within. To ensure timing needs are met, the system should provide realistic timelines and stick to them.
 \subsection{High System Reliability and Accessibility}
 \textbf{Description: }The system should be useable remotely for purchasers and labellers, and have minimal downtime. \\\\
-\textbf{Rationale: }The system should allow purchasers to upload images without being physically located where the system is hosted to ensure flexibility. The same should also be true for labellers, as they 
-should be able to perform their tasks at home. In both cases, the system should have low down time as to not introduce additional friction into the completion of tasks.
+\textbf{Rationale: }The system should allow purchasers to upload images without being physically located where the system is hosted to ensure flexibility of use. The same should also be true for labellers, as they 
+should be able to perform their tasks remotely. In both cases, the system should have low down time as to not introduce additional friction into the completion of tasks.
 
 \section{Stretch Goals}
 \subsection{Automatic Data Labelling}
