--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -140,9 +140,11 @@ move to the `inflight' section. After completion, and when a pull request is mad
 complete, they are moved to the archive. This organization will allow us to track how different components of the project are progressing, and identify
 if a team member is overwhelmed before it becomes a catastrophic issue.
 
-\wss{How will the project be scheduled?  This is the big picture schedule, not
-details. You will need to reproduce information that is in the course outline
-for deadlines.}
+The project can be found at \\\url{https://github.com/orgs/OKKM-insights/projects/1/settings}
+
+% \wss{How will the project be scheduled?  This is the big picture schedule, not
+% details. You will need to reproduce information that is in the course outline
+% for deadlines.}
 
 \section{Proof of Concept Demonstration Plan}
 
@@ -152,19 +154,19 @@ you will be able to overcome this risk?
 
 \section{Expected Technology}
 
-\wss{What programming language or languages do you expect to use?  What external
-libraries?  What frameworks?  What technologies.  Are there major components of
-the implementation that you expect you will implement, despite the existence of
-libraries that provide the required functionality.  For projects with machine
-learning, will you use pre-trained models, or be training your own model?  }
+% \wss{What programming language or languages do you expect to use?  What external
+% libraries?  What frameworks?  What technologies.  Are there major components of
+% the implementation that you expect you will implement, despite the existence of
+% libraries that provide the required functionality.  For projects with machine
+% learning, will you use pre-trained models, or be training your own model?  }
 
-\wss{The implementation decisions can, and likely will, change over the course
-of the project.  The initial documentation should be written in an abstract way;
-it should be agnostic of the implementation choices, unless the implementation
-choices are project constraints.  However, recording our initial thoughts on
-implementation helps understand the challenge level and feasibility of a
-project.  It may also help with early identification of areas where project
-members will need to augment their training.}
+% \wss{The implementation decisions can, and likely will, change over the course
+% of the project.  The initial documentation should be written in an abstract way;
+% it should be agnostic of the implementation choices, unless the implementation
+% choices are project constraints.  However, recording our initial thoughts on
+% implementation helps understand the challenge level and feasibility of a
+% project.  It may also help with early identification of areas where project
+% members will need to augment their training.}
 
 Topics to discuss include the following:
 
@@ -182,12 +184,12 @@ Topics to discuss include the following:
 \item Tools you will likely be using?
 \end{itemize}
 
-\wss{git, GitHub and GitHub projects should be part of your technology.}
+% \wss{git, GitHub and GitHub projects should be part of your technology.}
 
 \section{Coding Standard}
 Our back-end code, written in Python, will adhere to PEP 8 for code formatting and PEP 484 for type annotations. 
 For our front-end code, written in JavaScript, we will follow the JavaScript Standard Style.
-\wss{What coding standard will you adopt?}
+% \wss{What coding standard will you adopt?}
 
 \newpage{}
 
