--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -26,6 +26,7 @@
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
 9/18/2024 & Mathew Petronilho & Added Member Roles and Coding Standards\\
+9/23/2024 & Kartik Chaudhari & Added Stakeholders\\
 Date2 & Name(s) & Description of changes\\
 ... & ... & ...\\
 \bottomrule
@@ -40,6 +41,16 @@ what is contained in the report.}
 \wss{Additional information on the development plan can be found in the
 \href{https://gitlab.cas.mcmaster.ca/courses/capstone/-/blob/main/Lectures/L02b_POCAndDevPlan/POCAndDevPlan.pdf?ref_type=heads}
 {lecture slides}.}
+
+\section{Stakeholders}
+
+1.	Air Rescue Services: These organizations rely on satellite imagery to assist in critical missions like search and rescue. High-quality datasets can enhance their ability to assess disaster zones or monitor large areas efficiently, making response times quicker and saving lives. Satellite images tailored to disaster management, including flood zones or forest fires, are of particular importance to them.
+2.	Alternative Financial Data Companies: These companies use satellite data to analyze economic activities and trends. For example, satellite imagery of crop growth can be used to predict agricultural yields, or images of traffic patterns near malls can provide insights into retail performance. High-quality datasets enable these companies to develop more accurate financial models and market predictions.
+3.	Farmers and Agricultural Enterprises: Farmers benefit from satellite imagery for precision farming, monitoring crop health, soil conditions, and weather patterns. Access to customized datasets allows them to optimize planting schedules, monitor water usage, and make informed decisions about fertilizer application, improving yield and reducing costs.
+4.	End Users/Clients: This could include governments, NGOs, private companies, and environmental organizations that use the datasets to make informed decisions. These stakeholders expect reliable datasets that offer actionable insights, whether for environmental monitoring, urban planning, or defense-related tasks. Their satisfaction hinges on the accuracy and usability of the models developed from the data.
+
+Other Stakeholders: Beyond the primary stakeholders, other key groups that benefit from high-quality satellite imagery datasets include defense agencies, which rely on tailored data for surveillance, intelligence, and threat detection to enhance national security. Environmental agencies use satellite data to monitor ecosystems, track deforestation, and respond to climate change. Similarly, urban planners leverage this data to manage land use, plan infrastructure development, and promote sustainable growth in cities. Additionally, disaster relief organizations depend on satellite imagery to assess damage in real-time and prioritize aid during crisis situations, making these datasets crucial for effective disaster response. Another important group includes the image labeling teams, who manually classify and annotate satellite images. Their work is crucial for building accurate datasets, and they benefit from improved tools and clearer guidelines to make the labeling process more efficient.
+
 
 \section{Confidential Information?}
 
