--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -51,7 +51,10 @@ what is contained in the report.}
 3.	Farmers and Agricultural Enterprises: Farmers benefit from satellite imagery for precision farming, monitoring crop health, soil conditions, and weather patterns. Access to customized datasets allows them to optimize planting schedules, monitor water usage, and make informed decisions about fertilizer application, improving yield and reducing costs. \\
 \\
 
-4.	End Users/Clients: This could include governments, NGOs, private companies, and environmental organizations that use the datasets to make informed decisions. These stakeholders expect reliable datasets that offer actionable insights, whether for environmental monitoring, urban planning, or defense-related tasks. Their satisfaction hinges on the accuracy and usability of the models developed from the data. \\
+4.	Users: These are individuals or entities responsible for labeling the data on the platform. In return for their efforts, they receive compensation. Their primary role is to ensure that the datasets are correctly annotated according to specified requirements, which forms the basis of the models developed. Their work directly impacts the quality and usability of the final product. \\
+\\
+
+5.	End Clients/Customers: These stakeholders include governments, NGOs, private companies, and environmental organizations that pay for access to the labeled datasets and models. They rely on these datasets to make informed decisions in areas like environmental monitoring, urban planning, or defense-related tasks. Their satisfaction depends on the accuracy and reliability of both the data and the models provided. \\
 \\
 
 
