--- a/docs/ProblemStatementAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatementAndGoals/ProblemStatement.tex
@@ -23,6 +23,8 @@
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
 9/18/2024 & Mathew Petronilho & Added Problem, Challenge level and Extras\\
+9/23/2024 & Oleg Glotov & Added inputs output and Reflection sections\\
+
 Date2 & Name(s) & Description of changes\\
 ... & ... & ...\\
 \bottomrule
@@ -49,8 +51,24 @@ be used to train custom computer vision models for various use cases. At its cor
 and in turn, distribute the earnings to the users who contribute to the labeling effort.
 \subsection{Inputs and Outputs}
 
-\wss{Characterize the problem in terms of ``high level'' inputs and outputs.  
-Use abstraction so that you can avoid details.}
+Inputs:
+
+\begin{itemize}
+    \item Satellite imagery: Raw, unlabeled (satellite) images that form the foundational data for analysis.
+    \item Financial resources: Monetary resources for user compensations.
+    \item Human effort: Time and expertise contributed by users who label the images.
+\end{itemize}
+
+Outputs:
+
+\begin{itemize}
+    \item Labeled datasets: high-quality, specialized datasets tailored to specific industry needs.
+    \item Actionable insights: Industry specific information derived from the data as part of the labeling process
+    \item Trained models: Trained CV models capable of automating or simplifying image analysis tasks for different use cases.
+    \item Customer satisfaction: Users satisfaction stemming from platform use and monetary rewards.
+    \item Revenue generation: Income derived from providing paid services to clients needing specialized datasets and models.
+\end{itemize}
+
 
 \subsection{Stakeholders}
 
@@ -143,11 +161,17 @@ instructor, can be modified over the course of the term.}
 
 \begin{enumerate}
     \item What went well while writing this deliverable? 
+    
+    This deliverable was relatively straightforward for our team to complete. We had decided on a project early in the process and made sure that all team members were genuinely interested in the proposal before moving forward. We regularly discussed the progress of the deliverable, both in our team meetings and following our capstone classes. The workload was distributed evenly, and team members cross-checked each other's work to ensure consistency in our understanding of the project's objectives. This collaborative approach helped us stay aligned and on track throughout the process.
     \item What pain points did you experience during this deliverable, and how
     did you resolve them?
+
+    The primary challenge was establishing the project's workflow, specifically configuring the GitHub-LaTeX pipeline to automatically compile files upon upload. We addressed this by organizing a team-wide meeting to align everyone on the process and identify best practices. Additionally, we consulted with the professor, both in-person and through a discussion post on Teams, to ensure we were following the correct approach.
     \item How did you and your team adjust the scope of your goals to ensure
     they are suitable for a Capstone project (not overly ambitious but also of
     appropriate complexity for a senior design project)?
+    
+    Our project's flexible nature allows us to adjust its complexity by adding or removing features around the core idea. While the core concept itself is not entirely new, our focus is on applying it to a new domain, which will require research to determine the best approach. The core functionality will be supplemented with more advanced features and techniques to allow our project to be classified as “advanced”. However, should we encounter time constraints or technical challenges, these additional features can be omitted without compromising the project's core functionality.
 \end{enumerate}  
 
 \end{document}
