--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -48,7 +48,7 @@ There is no confidential information to protect.
 
 \section{IP to Protect}
 
-Currently we chose not to protect our IP as we are aiming for a commercial product. Down the line me most likely will have to opt in for IP protection.
+Currently we chose not to protect our IP as we are aiming for a commercial product. Down the line we most likely will have to opt in for IP protection.
 
 \section{Copyright License}
 
