Added git workflow plan

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -108,6 +108,26 @@ organize a meeting location, and provide an agenda. Following all meetings, the 
 
 \wss{Issues on GitHub should be part of your communication plan.}
 
+\section{Git Workflow}
+
+1.	Git Workflow Oversight: Kartik will oversee the Git workflow, ensuring best practices for branching, merging, and committing. Protection of the main branch will be a key responsibility, with required approvals before merges. \\
+\\
+
+2.	Approval Process: Ensuring that any code merged into the main branch receives approval from 1-2 team members, maintaining code quality and consistency across the project. \\
+\\ 
+
+3.	Branch and Issue Management: Each branch must be linked to a specific GitHub issue, and tasks will be broken down into small, manageable chunks. This ensures clarity and organization in the workflow.\\
+\\
+
+4.	Milestone and Deliverable Tracking: Each team member will monitor the progress of milestones and ensure that tasks are completed on time. Delays or blockers will be identified and addressed promptly. \\
+\\
+
+5.	Consistent Naming Conventions: Enforcing consistent naming conventions for branches, commits, and issues, ensuring ease of navigation and review within the project.\\
+\\
+
+6.	Integration of GitHub Issues: GitHub Issues will serve as the central tool for tracking tasks, with issues labeled and assigned based on their priority. This ensures that the workflow remains focused and efficient. \\
+\\
+
 \section{Team Member Roles}
 \begin{table}[H]
   \centering
