--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -6,6 +6,17 @@
 \usepackage{multirow}
 \usepackage{float}
 
+\usepackage[utf8]{inputenc}
+\usepackage{colortbl}
+\usepackage{xcolor}
+\usepackage{array}
+\usepackage{adjustbox}
+
+\definecolor{lightgray}{gray}{0.9}
+\definecolor{headerblue}{rgb}{0.2,0.4,0.6}
+\definecolor{rowblue}{rgb}{0.8,0.9,1}
+
+
 \title{Development Plan\\\progname}
 
 \author{\authname}
@@ -280,6 +291,39 @@ For both demos, we will utilize images from the "Where's Waldo?" book series. Th
     \item Complexity: The crowded scenes provide a realistic challenge similar to locating objects in satellite imagery.
 \end{itemize}
 
+\section{Project schedule}
+
+\begin{table}[h!]
+  \centering
+  \arrayrulecolor{headerblue}
+  \setlength{\arrayrulewidth}{1pt}
+  \rowcolors{1}{rowblue}{white}
+  \begin{adjustbox}{max width=\textwidth}
+  \begin{tabular}{|p{3cm}|p{5cm}|p{2.5cm}|p{2.5cm}|p{4cm}|p{2cm}|p{2.5cm}|p{4cm}|}
+  \hline
+  \rowcolor{headerblue}
+  \textbf{\color{white}Phase} & \textbf{\color{white}Tasks} & \textbf{\color{white}Start Date} & \textbf{\color{white}End Date} & \textbf{\color{white}Milestone} & \textbf{\color{white}Progress (\%)} & \textbf{\color{white}Expected Days} & \textbf{\color{white}Hardest Challenge} \\ \hline
+  Team Formation \& Initial Planning & Team Formed, Project Selected & 16-Sep-24 & 16-Sep-24 & Team Formed & 0\% & 1 & Aligning everyone on the project scope \\ \hline
+  Problem Definition \& POC Plan & Problem Statement, POC Plan, Development Plan & 17-Sep-24 & 23-Sep-24 & Submission of Problem Statement \& POC Plan & 2\% & 7 & Defining a clear and achievable proof of concept \\ \hline
+  Requirements Gathering & Draft Requirements Document (Backend \& Frontend) & 24-Sep-24 & 08-Oct-24 & Requirements Document Revision 0 & 5\% & 15 & Gathering comprehensive and precise requirements \\ \hline
+  Hazard Analysis & Identify Risks (Data quality, server security, etc.) & 10-Oct-24 & 23-Oct-24 & Submission of Hazard Analysis & 3\% & 14 & Identifying all possible hazards in satellite images \\ \hline
+  V\&V Plan & Verification \& Validation Plan (Test Plans, QA Plans) & 24-Oct-24 & 01-Nov-24 & V\&V Plan Revision 0 & 5\% & 9 & Designing a comprehensive testing plan for image models \\ \hline
+  Proof of Concept (POC) & Backend setup (database, server), Frontend skeleton & 01-Nov-24 & 10-Nov-24 & Basic functionality demonstrated & 5\% & 10 & Integrating satellite data into the backend system \\ \hline
+  Proof of Concept Demo & Present basic working model, get feedback & 11-Nov-24 & 22-Nov-24 & Proof of Concept Demonstration & 5\% & 12 & Gathering meaningful feedback and adjusting the system \\ \hline
+  Backend Development & API development, satellite image integration & 23-Nov-24 & 05-Jan-25 & Functional Backend for satellite data & Ongoing & 44 & Handling large amounts of satellite data efficiently \\ \hline
+  Frontend Development & UI/UX Design, Integrate APIs, Map Rendering & 23-Nov-24 & 05-Jan-25 & Functional Frontend & Ongoing & 44 & Building a user-friendly and interactive map interface \\ \hline
+  Design Document Revision & Revision of Design Document with final system architecture & 15-Dec-24 & 15-Jan-25 & Design Document Revision 0 & 5\% & 31 & Creating detailed technical architecture and design \\ \hline
+  Mid-Project Demonstration & Functional prototype of backend, frontend, and APIs & 03-Feb-25 & 14-Feb-25 & Revision 0 Demonstration & 10\% & 12 & Demonstrating a fully integrated prototype \\ \hline
+  Verification \& Validation (V\&V) & Test satellite image data processing, system reliability & 15-Feb-25 & 07-Mar-25 & V\&V Report Revision 0 & 5\% & 21 & Ensuring accuracy and consistency of the data processing \\ \hline
+  Final Project Demo (Revision 1) & Full system demo (backend, frontend, datasets, etc.) & 24-Mar-25 & 30-Mar-25 & Final Demonstration (Revision 1) & 20\% & 7 & Coordinating all components for a seamless demo \\ \hline
+  EXPO Preparation & Prepare for Expo, polishing the UI, final system tweaks & 01-Apr-25 & Apr TBD, 2025 & EXPO Demonstration & 10\% & 15 & Finalizing and polishing all aspects of the project \\ \hline
+  Final Documentation & Compile final reports, code, guides (Problem Statement to Final Report) & 01-Apr-25 & 15-Apr-25 & Final Submission & 30\% & 15 & Completing all documentation to a high standard \\ \hline
+  \end{tabular}
+  \end{adjustbox}
+  \caption{Project Schedule Overview}
+  \end{table}
+
+  
 \section{Expected Technology}
 
 % \wss{What programming language or languages do you expect to use?  What external
