Added Expected Technology

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -323,8 +323,42 @@ For both demos, we will utilize images from the "Where's Waldo?" book series. Th
   \caption{Project Schedule Overview}
   \end{table}
 
+
+  \section{Expected Technology}
+
+  \section{Frontend:}
+  \begin{itemize}
+      \item JavaScript: The primary language for the frontend development. It will handle user interactions and dynamic content updates on the web application.
   
-\section{Expected Technology}
+      \item React: A popular JavaScript library used to build the user interface (UI). It will manage the frontend components and allow for a dynamic, responsive user experience.
+  \end{itemize}
+  
+  \section{Backend:}
+  \begin{itemize}
+      \item Node.js: Used for the server-side development, Node.js provides an asynchronous event-driven architecture, making it suitable for handling multiple client requests efficiently.
+      \item Python: Plays a major role in machine learning (ML) tasks, image processing, and backend scripting.
+      \item Flask: A lightweight Python framework used to build the backend server. It will handle API requests, manage server routing, and integrate with the database.
+  \end{itemize}
+  
+  \section{Machine Learning \& Data Processing:}
+  \begin{itemize}
+      \item TensorFlow (TF): The main machine learning framework to train or fine-tune models for tasks such as image classification and segmentation. We may also leverage pre-trained models, like Meta’s Segment Anything Model for segmentation tasks.
+      \item Numpy: A core library for numerical computing in Python, essential for handling arrays and performing mathematical operations efficiently.
+      \item PILLOW: A Python library used for image processing, enabling tasks like image resizing, format conversion, and basic manipulations.
+  \end{itemize}
+  
+  \section{Database:}
+  \begin{itemize}
+      \item SQLAlchemy: A powerful ORM (Object Relational Mapper) for Python that will facilitate database connections and work with both SQL and NoSQL databases.
+      \item SQL (PostgreSQL): Suitable for handling structured data and relationships. Ideal if we require ACID compliance and structured querying.
+      \item NoSQL (MongoDB): More flexible for handling unstructured data, allowing for greater scalability and schema-less design.
+  \end{itemize}
+  
+  \section{Cloud:}
+  \begin{itemize}
+      \item AWS/Azure: Used for hosting, storage, and machine learning models. AWS/Azure provides scalable infrastructure for both our backend and frontend.
+  \end{itemize}
+  
 
 % \wss{What programming language or languages do you expect to use?  What external
 % libraries?  What frameworks?  What technologies.  Are there major components of
