Linters and Model checker

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -357,6 +357,17 @@ For both demos, we will utilize images from the "Where's Waldo?" book series. Th
   \section{Cloud:}
   \begin{itemize}
       \item AWS/Azure: Used for hosting, storage, and machine learning models. AWS/Azure provides scalable infrastructure for both our backend and frontend.
+
+  \section{Linting and Static Type Checking:}
+  \begin{itemize}
+    \item Mypy: A static type checker for Python that will ensure the correctness of types throughout the code, helping prevent runtime errors.
+    \item ESLint: The linter for JavaScript code, ensuring code quality and consistency in the frontend. It enforces best practices and helps catch errors early in development.
+  \end{itemize}
+
+   \section{Model Training:}
+  \begin{itemize}
+      •	The project will involve training custom models or fine-tuning existing ones, particularly focusing on computer vision tasks. We will be working with Meta’s Segment Anything Model for fine-tuning and extending its capabilities to fit our satellite image use case.
+
   \end{itemize}
   
 
