--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -173,7 +173,7 @@ organize a meeting location, and provide an agenda. Following all meetings, the 
     \cline{1-2} 
     Kyle McMaster & Meeting Chair, Back-End Development \& AI Expert  & \\
     \cline{1-2}
-    Kartik Chaudhari & Customer Relations Manager, ML \& Git Expert & \\
+    Kartik Chaudhari & Customer Relations Manager, Product \& Deployment Manager, ML, \& Git Expert & \\
     \hline
   \end{tabular}
   \caption{Team Roles}
