Added missing end{itemize}

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -400,7 +400,7 @@ For both demos, we will utilize images from the "Where's Waldo?" book series. Th
   \section{Cloud:}
   \begin{itemize}
       \item AWS/Azure: Used for hosting, storage, and machine learning models. AWS/Azure provides scalable infrastructure for both our backend and frontend.
-
+ \end{itemize}
   \section{Linting and Static Type Checking:}
   \begin{itemize}
     \item Mypy: A static type checker for Python that will ensure the correctness of types throughout the code, helping prevent runtime errors.
